kaizen: Update config for kaizen
Signed-off-by: Tim Bray <tbray@textuality.com>

--- a/.chglog/config.yml
+++ b/.chglog/config.yml
@@ -18,6 +18,7 @@ options:
       pat: 📖 Pattern Language
       chore: 🧹 Chore
       fix: 🐞 Fix
+      kaizen: 👩‍🎨 Improve
       docs: 📚 Documentation
   header:
     pattern: "^(\\w*)\\:\\s(.*)$"
