fixup! kaizen: Update config for kaizen
Signed-off-by: Michael Gasch <15986659+embano1@users.noreply.github.com>

--- a/.chglog/config.yml
+++ b/.chglog/config.yml
@@ -2,7 +2,7 @@ style: github
 template: CHANGELOG.tpl.md
 info:
   title: CHANGELOG
-  repository_url: https://github.com/embano1/ci-demo-app
+  repository_url: https://github.com/timbray/quamina
 options:
   commits:
     filters:
@@ -11,6 +11,7 @@ options:
         - pat
         - chore
         - fix
+        - kaizen
         - docs
   commit_groups:
     title_maps:
