--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -29,7 +29,7 @@ jobs:
         id: go
 
       - name: Run benchmark
-        run: go test  -benchmem -run="^$" -bench "^Benchmark" . github.com/timbray/quamina | tee output.txt
+        run: go test  -benchmem -run="^$" -bench "^Benchmark" . quamina.net/go/quamina | tee output.txt
 
       - name: Download previous benchmark data
         uses: actions/cache@58c146cc91c5b9e778e71775dfe9bf1442ad9a12
