chore: Print benchmark summaries
Signed-off-by: Michael Gasch <15986659+embano1@users.noreply.github.com>

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -47,6 +47,9 @@ jobs:
           output-file-path: output.txt
           external-data-json-path: ./cache/benchmark-data.json
 
+          # print job summary in workflow output
+          summary-always: true
+
           # Alert on regression
           alert-threshold: "120%"
           fail-on-alert: true
