--- a/.github/workflows/go-unit-tests.yaml
+++ b/.github/workflows/go-unit-tests.yaml
@@ -68,6 +68,8 @@ jobs:
       - if: steps.codecov-enabled.outputs.files_exists == 'true'
         name: Upload Codecov Report
         uses: codecov/codecov-action@125fc84a9a348dbcf27191600683ec096ec9021c
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Verify git clean
         shell: bash
