kaizen: add equals-ignore-case pattern
addresses: #186
Signed-off-by: Tim Bray <tbray@textuality.com>

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -52,7 +52,7 @@ jobs:
 
           # Alert on regression
           alert-threshold: "120%"
-          fail-on-alert: false
+          fail-on-alert: true
           comment-on-alert: false
 
           # Disable github pages, for now.
