--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -52,8 +52,8 @@ jobs:
 
           # Alert on regression
           alert-threshold: "120%"
-          fail-on-alert: true
-          comment-on-alert: false
+          fail-on-alert: false
+          comment-on-alert: true
 
           # Disable github pages, for now.
           auto-push: false
