enable github token for benchmarker
Signed-off-by: Tim Bray <tbray@textuality.com>

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -42,6 +42,7 @@ jobs:
         with:
           name: Go Benchmark
           tool: "go"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
           # Compare results against json from cache
           output-file-path: output.txt
