--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -42,6 +42,7 @@ jobs:
         with:
           name: Go Benchmark
           tool: "go"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
           # Compare results against json from cache
           output-file-path: output.txt
@@ -53,7 +54,7 @@ jobs:
           # Alert on regression
           alert-threshold: "120%"
           fail-on-alert: false
-          comment-on-alert: false
+          comment-on-alert: true
 
           # Disable github pages, for now.
           auto-push: false
