--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,32 +1,44 @@
+version: "2"
 linters:
-  disable-all: false
-  # https://golangci-lint.run/usage/linters/#enabled-by-default
   enable:
-    - gofmt
     - bodyclose
     - errname
     - errorlint
     - gochecknoinits
-    - goimports
     - goprintffuncname
     - gosec
-    # - ireturn
     - misspell
     - nilerr
     - nilnil
     - predeclared
-    - stylecheck
+    - staticcheck
     - thelper
     - tparallel
     - unparam
-    # - wrapcheck
     - whitespace
-    # wastedassign is disabled because of generics. You can track the evolution of the generics support by following the https://github.com/golangci/golangci-lint/issues/2649
-    # - wastedassign
-
-issues:
-  exclude-rules:
-    - path: _test\.go
-      text: "Use of weak random number generator" #gosec:G404
-    - path: _test\.go
-      text: "ST1018"
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    rules:
+      - path: _test\.go
+        text: Use of weak random number generator
+      - path: _test\.go
+        text: ST1018
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
