--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -28,6 +28,8 @@ linters:
         text: Use of weak random number generator
       - path: _test\.go
         text: ST1018
+      - path: flatten_json\.go
+        text: G602
     paths:
       - third_party$
       - builtin$
